rename bookings to events for more generic name
